# serial-experiments-ozon-trash1000

./: .gitignore  CLAUDE.md  README.md
SWEeM/: .editorconfig  SWEeM.sln  compose.yaml
SWEeM/SWEeM/: Dockerfile  Program.cs  SWEeM.csproj
SWEeM/SWEeM/API/Endpoints/: ClientEndpoints.cs  ProjectEndpoints.cs  UserEndpoints.cs
SWEeM/SWEeM/Application/Contracts/Services/: IClientService.cs  IProjectService.cs  IUserService.cs
SWEeM/SWEeM/Application/Dtos/: PaginatedResult.cs
SWEeM/SWEeM/Application/Dtos/Client/: ClientDto.cs  CreateClientDto.cs  UpdateClientDto.cs
SWEeM/SWEeM/Application/Dtos/Project/: CreateProjectDto.cs  ProjectDto.cs  UpdateProjectDto.cs
SWEeM/SWEeM/Application/Dtos/User/: CreateUserDto.cs  UpdateUserDto.cs  UserDto.cs
SWEeM/SWEeM/Application/Extensions/: QueryableExtensions.cs
SWEeM/SWEeM/Application/Mappers/: ClientMappers.cs  ProjectMappers.cs  UserMappers.cs
SWEeM/SWEeM/Application/Services/: ClientService.cs  ProjectService.cs  UserService.cs
SWEeM/SWEeM/Domain/Entities/: Client.cs  Project.cs  User.cs
SWEeM/SWEeM/Domain/Enums/: Role.cs
SWEeM/SWEeM/Infrastructure/Persistence/: AppDbContext.cs  AppDbContextFactory.cs
SWEeM/SWEeM/Migrations/: 20251218102114_InitialMigration.Designer.cs  20251218102114_InitialMigration.cs  AppDbContextModelSnapshot.cs
SWEeM/SWEeM/Properties/: launchSettings.json
sweem-tui/: Cargo.toml  README.md
sweem-tui/src/: api.rs  app.rs  main.rs  models.rs  particles.rs  theme.rs  timeline.rs  ui.rs
