[package]
name = "sweem-tui"
version = "0.1.0"
edition = "2021"
authors = ["SWEeM Team"]
description = "A high-performance, aesthetically stunning TUI for the SWEeM REST API"
license = "MIT"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
color-eyre = "0.6"
anyhow = "1.0"

# UUID handling
uuid = { version = "1.11", features = ["serde", "v4"] }

# Random for particle system
rand = "0.8"

[[bin]]
name = "sweem-tui"
path = "src/main.rs"
